fix alignment of projects.html and nav bar

--- a/css/projects.css
+++ b/css/projects.css
@@ -137,7 +137,7 @@ input[type=submit]:hover {
     height: auto;
     width: 100%;
     transition: transform .2s;
-    margin-left: 15vw;
+    margin-left: 12vw;
   }
 
   .card:hover {
